# sunset-novelites-1.0

./: .gitignore  .replit  DEPLOYMENT_README.md  MIGRATION_README.md  Procfile  README.md  acumatica_to_mysql_migration.py  app.py  application.py  azure_to_mysql_migration.py  cached_dashboard.py  check_acumatica_data.py  check_database_schema.py  check_databases.py  check_table_rows.py  check_tables.py  create_template.py  dashboard-deploy-key.pem  dashboard-key.pem  dashboard-new-key.pem  debug_acumatica.py  debug_dashboard.py  debug_restock_calculation.py  deploy_to_eb.sh  explore_rds_schema.py  fast_dashboard.py  find_correct_join.py  fix_acumatica_join.py  full_dashboard.py  full_data_dashboard.py  instant_dashboard.py  migration_requirements.txt  optimize_queries.py  pyproject.toml  rds_dashboard.py  rds_dashboard_fixed.py  rds_dashboard_full.py  replit.nix  reports_sales_listings_item.csv  requirements.txt  (+14 more)
.ebextensions/: 01_packages.config  02_python.config
ec2-deployment/: app.py  deploy_to_ec2.sh  requirements.txt
sales-stock-vista/: README.md  index.html
sales-stock-vista/src/: index.css
sales-stock-vista/src/components/dashboard/: CategoryAnalysisTab.tsx  CategoryChart.tsx  CategoryPerformanceChart.tsx  CategorySummaryTable.tsx  ChartsAnalyticsTab.tsx  DashboardHeader.tsx  InsightsTab.tsx  MetricCard.tsx  NegativeMarginsList.tsx  OverviewTab.tsx  ProductAnalysisTab.tsx  ProductTable.tsx  ProfitMarginChart.tsx  (+3 more)
sales-stock-vista/src/pages/: Index.tsx
templates/: dashboard.html  dashboard_pro.html  professional_dashboard.html  simple_dashboard.html
