[tool.poetry]
name = "sunset-novelties-dashboard"
version = "1.0.0"
description = "Sunset Novelties Sales Analytics Dashboard"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
pandas = "^2.0.0"
plotly = "^5.15.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 